<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/gradiente">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradiente"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="200dp"
                        android:layout_height="160dp"
                        android:layout_gravity="center"
                        app:srcCompat="@mipmap/logo"
                        android:contentDescription="@string/logoUp" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="20dp"
                        android:text="@string/txtWelcome"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/emailId"
                        android:hint="@string/email_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:textColor="@color/colorWhite"

                        android:inputType="textEmailAddress"
                        android:autofillHints="" />

                    <EditText
                        android:id="@+id/password"
                        android:hint="@string/pass_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:textColor="@color/colorWhite"
                        android:inputType="textPassword"
                        android:autofillHints="" />


                    <Button
                        android:id="@+id/email_sign_in_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/btnIngresar"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"/>


                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>
</layout>